--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Mafia</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" class="wrapper">
+    <div class="push"></div>
+  </div>
+  <footer class="footer">
+    <div>Icons created by <a href="https://www.flaticon.com/de/autoren/good-ware" title="Good Ware">Good Ware</a> from
+      <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons created by <a href="https://www.flaticon.com/de/autoren/nikita-golubev" title="Nikita Golubev">Nikita
+        Golubev</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+  </footer>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
