--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Mafia</title>
+  <title>MafiaGame</title>
 </head>
 
 <body>
@@ -39,8 +39,6 @@
       <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
     <div>Icons created by <a href="https://www.flaticon.com/de/autoren/nikita-golubev" title="Nikita Golubev">Nikita
         Golubev</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
-        href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
     <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
         href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
   </footer>
