--- a/public/index.html
+++ b/public/index.html
@@ -31,17 +31,18 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class="wrapper">
-    <div class="push"></div>
+  <div id="page-container">
+    <div id="root" class="content-wrap">
+    </div>
+    <footer id="footer">
+      <div>Icons created by <a href="https://www.flaticon.com/de/autoren/good-ware" title="Good Ware">Good Ware</a> from
+        <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+      <div>Icons created by <a href="https://www.flaticon.com/de/autoren/nikita-golubev" title="Nikita Golubev">Nikita
+          Golubev</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+      <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
+          href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
   </div>
-  <footer class="footer">
-    <div>Icons created by <a href="https://www.flaticon.com/de/autoren/good-ware" title="Good Ware">Good Ware</a> from
-      <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Icons created by <a href="https://www.flaticon.com/de/autoren/nikita-golubev" title="Nikita Golubev">Nikita
-        Golubev</a> from <a href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Icons created by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a
-        href="https://www.flaticon.com/de/" title="Flaticon">www.flaticon.com</a></div>
-  </footer>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
